--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 [deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
-FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -13,8 +13,8 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SummationByPartsOperators = "9f78cca6-572e-554e-b819-917d2f1cf240"
 
 [compat]
+CairoMakie = "=0.12.16"
 DelimitedFiles = "1.9"
-FilePathsBase = "=0.9.22"
 Interpolations = "=0.15.1"
 LaTeXStrings = "=1.4.0"
 LinearAlgebra = "1.10"
